--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </nav>
 
-        <!-- Nuestros Productos -->
+        <!-- Nuestro Productos -->
         <section class="mt-5 pt-4">
             <h1 class="display-4 my-5 py-5 text-center text-secondary font-weight-bold">Nuestros Productos
             </h1>
